2012-05-29  Koichiro Kikuchi <koichiro@rworks.jp>

	* util/pandora_db.pl: Don't delete non-initialized modules which
	 belong to disabled agent.

2012-05-21  Sergio Martin <sergio.martin@artica.es>

	* lib/PandoraFMS/Core.pm: Added new Internal Command for
	actions to validate the events of one module given 
	the agent name (field1) and the module name (field2)

2012-05-21  Koichiro Kikuchi  <koichiro@rworks.jp>

	* util/pandora_db.pl: Merged from 4.0.2: Set default DB port
	 number when it's not specified in the configuration file.

2012-05-17  Sergio Martin <sergio.martin@artica.es>

	* util/pandora_manage.pl: Added --create_network_module_from_component
	option to CLI passing component and target agent names

2012-05-16 Dario Rodriguez <dario.rodriguez@artica.es>

	* util/pandora_xml_stress.conf: Fixed a wrong default configuration file
	for pandora_xmk_stress

	MERGED FROM 4.0.2

2012-05-11  Junichi Satoh <junichi@rworks.jp>

	* ChangeLog: Fixed conflict with previous commit. (Added lost lines.)
	
2012-05-10  Sergio Martin <sergio.martin@artica.es>

	* lib/PandoraFMS/DB.pm
	lib/PandoraFMS/Core.pm: Added the macro _alert_text_severity_ to
	the alerts

2012-05-10  Junichi Satoh <junichi@rworks.jp>

	* FreeBSD/pandora_server.conf: Synchronized with the generic
	configuration file, conf/pandora_server.conf (better default values).

2012-05-09 Dario Rodriguez <dario.rodriguez@artica.es>

	* util/plugin/ipmi-plugin.pl,
	util/recon_scripts/ipmi-recon.pl: Fixed some bugs of plugin and
	recon

	MERGED FROM 4.0.2

2012-05-08  Sancho Lerena <slerena@artica.es>

	* conf/pandora_server.conf: Better default values.

2012-04-28  Junichi Satoh <junichi@rworks.jp>

	* lib/PandoraFMS/Core.pm: Added a missing argument to process_data()
	call.

2012-04-26  Sergio Martin <sergio.martin@artica.es>

	* lib/PandoraFMS/Core.pm: Added call to delete the agent
	related nodes of the network map enterprise

2012-04-23  Ramon Novoa  <rnovoa@artica.es>
